--- a/NigredoServer/package.json
+++ b/NigredoServer/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "update": "node ./lib/update-widgets.js"
   },
   "keywords": [],
   "author": "",
