--- a/NigredoServer/package.json
+++ b/NigredoServer/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
+    "better-node-gtts": "^1.1.0",
     "chalk": "^4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
