--- a/AlbedoClient/angular.json
+++ b/AlbedoClient/angular.json
@@ -39,7 +39,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/albedo-client",
+            "outputPath": "../NigredoServer/public",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
