removed unnessecary script and call

--- a/NigredoServer/package.json
+++ b/NigredoServer/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js",
-    "update": "node ./lib/update-widgets.js"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
