--- a/NigredoServer/package.json
+++ b/NigredoServer/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mp3-duration": "^1.1.0",
     "socket.io": "^4.6.1",
     "tmi.js": "^1.8.5",
     "websocket": "^1.0.34"
