--- a/NigredoServer/package.json
+++ b/NigredoServer/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mp3-duration": "^1.1.0",
+    "obs-websocket-js": "^5.0.5",
     "socket.io": "^4.6.1",
     "tmi.js": "^1.8.5",
     "websocket": "^1.0.34"
